have implemented a boolean to end game when someone wins or end game button is pressed, need to add option to play over again.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <main>
         <canvas id ='canvas'></canvas>
     </main>
+    <button id ="start">start New Game</button>
+    <button id="end">end Game</button>
 </body>
 </html>
