working endGame and restart game button along with ability to count both users' wins

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <main>
         <canvas id ='canvas'></canvas>
     </main>
-    <button id ="start">start New Game</button>
     <button id="end">end Game</button>
+    <button id ="start">Play Again 🔄</button>
+    
 </body>
 </html>
