creted working buttons to reset game and move from game to menu page, need to work on instructions, styling, and improving player movements.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
 <body>
     <p></p>
     <main>
+        <h1>Piglet Run</h1>
+        <div id ='menuPage'>
+            <button id = 'menuStart'>Start Playing</button>
+            <button id ='instructions'>Game Instructions</button>
+            <button id ='score'>Score Board</button>
+            <div id = 'scoreboard'></div>
+        </div>
         <canvas id ='canvas'></canvas>
+        <div id = 'bottomButton'>
+            <button id ="backToMenu">Back to Menu</button>
+            <button id="end">end Game</button>
+            <button id ="start">Play Again 🔄</button>
+        </div>
     </main>
-    <button id="end">end Game</button>
-    <button id ="start">Play Again 🔄</button>
     
 </body>
 </html>
