created simple instruction message

--- a/index.html
+++ b/index.html
@@ -18,8 +18,19 @@
             <button id ='instructions'>Game Instructions</button>
             <button id ='score'>Score Board</button>
             <div id = 'scoreboard'></div>
+            <div id ='instructionsm'>
+                <h1><strong>Welcome to Piglet Run</strong></h1>              
+                    <ul>This is a multiplayer racing game with a predator and prey scenario</ul>
+                    <ul>In order for the prey to win, their goal is to make it to the end of the map to the door on the far left corner without being caught by the butcher</ul>
+                    <ul>The butcher's goal is to catch up to the prey before the prey has a chance to reach the end</ul>
+                <h2>User Controls</h1>
+                <ul><h2>Butcher: (←) (↑) (→)</h2></ul>
+                <ul><h2>Piglet: (a) (w) (d)</h2></ul>
+            </div>
         </div>
-        <canvas id ='canvas'></canvas>
+        <div id ='message'></div>
+        <canvas id ='canvas'>
+        </canvas>
         <div id = 'bottomButton'>
             <button id ="backToMenu">Back to Menu</button>
             <button id="end">end Game</button>
