game logic complete, might work on some css

--- a/index.html
+++ b/index.html
@@ -7,25 +7,23 @@
     <script src = './main.js' defer></script>
     <link rel="stylesheet" href ='./styles.css'/>
     
-    <title>Piglet Run</title>
+    <title>Tag</title>
 </head>
 <body>
     <p></p>
     <main>
-        <h1>Piglet Run</h1>
+        <h1>Tag</h1>
         <div id ='menuPage'>
             <button id = 'menuStart'>Start Playing</button>
             <button id ='instructions'>Game Instructions</button>
             <button id ='score'>Score Board</button>
             <div id = 'scoreboard'></div>
             <div id ='instructionsm'>
-                <h1><strong>Welcome to Piglet Run</strong></h1>              
-                    <ul>This is a multiplayer racing game with a predator and prey scenario</ul>
-                    <ul>In order for the prey to win, their goal is to make it to the end of the map to the door on the far left corner without being caught by the butcher</ul>
-                    <ul>The butcher's goal is to catch up to the prey before the prey has a chance to reach the end</ul>
+                <h1><strong>Welcome to Tag</strong></h1>              
+                    <ul>This is a multiplayer tag game where there are two users, one with the goal to make it to the end of the map without being tagged, and the other user's goal is to tag their oponent before so</ul>
                 <h2>User Controls</h1>
-                <ul><h2>Butcher: (←) (↑) (→)</h2></ul>
-                <ul><h2>Piglet: (a) (w) (d)</h2></ul>
+                <ul><h2>Mask: (←) (↑) (→)</h2></ul>
+                <ul><h2>Frog: (a) (w) (d)</h2></ul>
             </div>
         </div>
         <div id ='message'></div>
