working on improving styling, including comments, and refactoring any code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <div id = 'scoreboard'></div>
             <div id ='instructionsm'>
                 <h1><strong>Welcome to Tag</strong></h1>              
-                    <ul>This is a multiplayer tag game where there are two users, one with the goal to make it to the end of the map without being tagged, and the other user's goal is to tag their oponent before so</ul>
+                <ul>This is a multiplayer tag game where there are two users, one with the goal to make it to the end of the map without being tagged, and the other user's goal is to tag their oponent before so</ul>
+                <ul>After every game the users switch roles</ul>
                 <h2>User Controls</h1>
                 <ul><h2>Mask: (←) (↑) (→)</h2></ul>
                 <ul><h2>Frog: (a) (w) (d)</h2></ul>
